cluster/nginx-helloworld/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-world
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-hello-world
