cluster/nginx-helloworld/ingress.yaml
apiVersion: networking.k8s.io/v1 # Use stable API version
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - hello-world.kubenix.niveri.dev
      secretName: nginx-example-tls
  rules:
  - host: hello-world.kubenix.niveri.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-hello-world
            port:
              number: 80
